--- a/lab01_telegram_bot/pom.xml
+++ b/lab01_telegram_bot/pom.xml
@@ -22,5 +22,15 @@
             <artifactId>telegrambots</artifactId>
             <version>6.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.7</version>
+        </dependency>
     </dependencies>
 </project>
