--- a/lab02_sockets/pom.xml
+++ b/lab02_sockets/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>lab02</artifactId>
+    <artifactId>lab02_sockets</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
