--- a/lab2_10_rest/src/main/resources/application.properties
+++ b/lab2_10_rest/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=lab2_10
-server.port=8088
+server.port=8090
+
+spring.security.user.name=admin
+spring.security.user.password=admin
+
 
 spring.mvc.format.date=yyyy-MM-dd
 spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
